Closed
Bug 1085051
Opened 5 years ago
Closed 5 years ago
Mismatching alloc/dealloc in DrawTargetCG::FillGlyphs
Categories
(Core :: Graphics, defect)
Not set
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: reversetranscriptions, Assigned: reversetranscriptions)
Details
Attachments
(1 file)
1.78 KB,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:32.0) Gecko/20100101 Firefox/32.0.3 Waterfox/32.0 Build ID: 20141008010346 Steps to reproduce: View DrawTargetCG.cpp at line 1222 and line 1232. Actual results: Usage of delete over delete[]. Expected results: Usage of delete[] over delete.
Updated•5 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 8.1 → Mac OS X
Hardware: x86 → All
Updated•5 years ago
|
Attachment #8507465 -
Attachment is patch: true
Attachment #8507465 -
Attachment mime type: text/x-patch → text/plain
Attachment #8507465 -
Flags: review?(jmuizelaar)
Updated•5 years ago
|
Attachment #8507465 -
Flags: review?(jmuizelaar) → review+
Comment 1•5 years ago
|
||
reporter: the attached patch shows the author as "Lioncash <reversetranscriptions@gmail.com>", which sounds like a nickname or alias; is that sufficient attribution for you, or should we use a full name?
Flags: needinfo?(reversetranscriptions)
Comment 2•5 years ago
|
||
I went ahead and landed this, so it doesn't get forgotten... https://hg.mozilla.org/integration/mozilla-inbound/rev/042e7860e157
Flags: needinfo?(reversetranscriptions)
Target Milestone: --- → mozilla36
Comment 3•5 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/042e7860e157
Assignee: nobody → reversetranscriptions
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•