Bug 1085051 - Fix mismatched new[]/delete in DrawTargetCG::FillGlyphs. r=jrmuizel